fix some alignment stuff

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -145,14 +145,16 @@ h1 {
 
   li {
     text-align: left;
+    display: flex;
+    align-items: center;
   }
 
   .list__title {
     font-weight: 700;
     width: 35%;
-    display: inline-block;
     text-transform: uppercase;
     font-size: 0.75rem;
+    line-height: 1rem;
   }
 
   .list__content {
